# PU_DCGP_COMSOL

./: .gitignore  README.md  pyproject.toml  train.py
pu_dcgp/: __init__.py  admission_gate.py  benchmark_admission.py  benchmark_band_audit.py  benchmark_checkpoint.py  benchmark_completion_audit.py  benchmark_contract.py  benchmark_failure_audit.py  benchmark_gate_diagnostics.py  benchmark_generator.py  benchmark_generator_audit.py  benchmark_hypotheses.py  benchmark_method_audit.py  benchmark_methods.py  benchmark_metrics.py  benchmark_postformal.py  benchmark_postformal_report.py  benchmark_prediction.py  benchmark_report.py  benchmark_reporting.py  benchmark_runner.py  benchmark_selection.py  benchmark_settings.py  build_manuscript_docx.py  causal_graph.py  config.py  contracts.py  contrast_support.py  contrast_uncertainty.py  data_source.py  distribution_encoder.py  effect_uncertainty.py  estimands.py  gaussian_process.py  gp_evaluation.py  interfaces.py  matched_effects.py  mean_baselines.py  merge_formal_benchmark.py  module_anchor.py  (+10 more)
pu_dcgp_v26/: __init__.py  a_group_network_count_sensitivity.py  a_group_network_inference_reanalysis.py  a_group_network_point_reanalysis.py  a_group_network_stability_reanalysis.py  a_group_qc.py  b_group_auxiliary_analysis.py  b_group_qc.py  comsol_b_observation_validation.py  correct_a_group_manifest_mapping.py  export_a_group_journal_figures.py  export_a_group_quantile_figures.py  export_b_group_journal_figures.py  finalize_a_group_journal_figures.py  journal_figure_style.py  plot_a_group_supported_network.py  run_a_group_qc.py  (+13 more)
(+174 files in other folders)
