[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pu-dcgp-comsol"
version = "0.1.0"
description = "PU-DCGP and COMSOL research workflow"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26,<3",
  "mph>=1.2,<2",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.12,<1",
]

[tool.setuptools.packages.find]
include = ["simulator_v2*"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
  "simulator_v2/phase_h/comsol_models",
  "simulator_v2/phase_h/h11_outputs",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
